<resources>
    <string name="app_name">API Playground SDK 9</string>
    <string name="btnCustomTxt">Button</string>
    <string name="btnDialogTxt">Dialog</string>
    <string name="tvSdkTxt">SDK Version: </string>
    <string name="normalDialogTxt">Programs: Find size of int, float, double and char. Demonstrate the working of keyword long. Swap two numbers. 
Check whether A number is even or odd. Check whether A character is vowel or consonant. Find the largest number among three numbers. 
Find all roots of A quadratic equation. Check leap year. Check whether A number is positive or negative. Check whether A character is an alphabet or not.
Calculate the sum of natural numbers. Find factorial of A number. Generate multiplication table. Display fibonacci sequence. Find GCD of two numbers.
Find LCM of two numbers. Display characters from a to z using a loop. Count number of digits in an integer. Reverse A number. Calculate the power of A number.
Check whether A number is Palindrome or not. Check whether A number is prime or not. Display prime numbers between two intervals. Check Armstrong Number 
between two intervals. Display factors of A number. Create A pyramid structure. Calculator using switch/case. Display Prime numbers between intervals
using funcion. Check prime or Armstron number using user-defined function. Check whether A number can be expressed as sum of two prime numbers.
Find the sum of natural numbers using recursion. Find factorial of A number using recursion. Find G.C.D. using recursion. Convert Binary number 
to decimal and vice-versa. Convert Octal to decimal and vice-versa. Convert Binary to octal and vice-versa. Reverse sentence using recursion.</string>
    <string name="tvDateTxt">Tap Date</string>
    <string name="btnLogTxt">Log</string>
    <string name="btnDateTxt">Date</string>
    <string name="tvPrintTxt">Type in the field below, then tap Show Text</string>
    <string name="etPrintHint">Type here…</string>
    <string name="btnPrintTxt">Show Text</string>
    <string name="dialogTv1Txt">Before getting started with C programming, lets get familiarized with the language first. C is a general-purpose 
programming language used for wide range of applications from Operating systems like Windows and iOS to software that is used for creating 3D movies.
C programming is highly efficient. That’s the main reason why it’s very popular despite being more than 40 years old. Standard C programs are portable. 
The source code written in one system works in another operating system without any change. As mentioned, it’s a good language to start learning 
programming. If you know C programming, you will not just understand how your program works, but will also be able to create a mental picture 
on how a computer works.</string>
    <string name="dialogTv2Txt">\nIf you know C, you will not only know how your program works but, you will be able to create a mental model 
on how a computer works (including memory management and allocation). You will learn to appreciate the freedom that C provides unlike Python and Java.
Understanding C allows you to write programs that you never thought were possible before (or at the very least, you will have a broader understanding 
of computer architecture and programming as a whole).</string>
    <string name="dialogBtn1Txt">Toast</string>
    <string name="dialogBtn2Txt">Close</string>
    <string name="dialogTitle">Info Dialog</string>
    <string name="listHeaderTxt">Notes</string>
</resources>
