<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent" >

  <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="4dp" >

    <TextView
        android:id="@+id/tvSdk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center" />

    <TextView
        android:id="@+id/tvFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnCustom"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginRight="4dp"
        android:background="@drawable/custom_button"
        android:text="@string/btnCustomTxt"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btnDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDialogTxt" />

    <TextView
        android:id="@+id/tvSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnLogTxt" />

    <Button
        android:id="@+id/btnDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDateTxt" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvDateTxt" />

    <TextView
        android:id="@+id/tvPrint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvPrintTxt" />

    <EditText
        android:id="@+id/etPrint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etPrintHint"
        android:inputType="text" />

    <Button
        android:id="@+id/btnPrint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnPrintTxt" />

    <TextView
        android:id="@+id/resultsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/normalDialogTxt" />

  </LinearLayout>

</ScrollView>
