<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    
    <Button
        android:id="@+id/dialogBtn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/dialogBtn1Txt" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/dialogBtn1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dialogTv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialogTv1Txt" />

            <TextView
                android:id="@+id/dialogTv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialogTv2Txt" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/dialogBtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_toEndOf="@id/dialogBtn1"
        android:layout_toRightOf="@id/dialogBtn1"
        android:text="@string/dialogBtn2Txt" />

</RelativeLayout>
